--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
+            <p class="tl-duration">September 2024 - Present</p>
+            <h5>Master of Computer Science <span> | Lincoln University College </h5>
+            <p>The Master of Computer Science will boost my career as a Data Analyst by 
+              improving my skills in data analysis, big data, and machine learning. 
+              It will help me use advanced tools for better data insights, preparing me for 
+              roles like Data Scientist and helping me grow in the tech industry.
+            </p>
+          </div>
+          
+
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
             <p class="tl-duration">October 18 2023 - Present</p>
             <h5>Master Data Analyst<span> - Bottlers Nepal Pvt. Ltd.</h5>
             <p>As a associate, working with master data at Bottlers Nepal Limited (Coca-Cola Nepal) 
