--- a/index.html
+++ b/index.html
@@ -642,12 +642,12 @@
                     <br>
                   </div>
                 </div>
-                <div class="contact-item">
+<!--                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-phone"></i>
                     <span>+977-9861437372 </span>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="contact-icons">
                 <div class="contact-icon">
